# python-swampyer

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README  README.md  VERSIONS.txt  docker-compose.yml  noxfile.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run.sh  setup.py  tox.ini
docker/: build-envs.sh  run-test.sh  setup-env.sh  shell.sh  tox.sh  wait-for-nexus.sh
examples/: 01-hello-unix-socket.py  01-hello.py  02-rpc-client.py  02-rpc-server.py  03-subscription-publisher.py  03-subscription-subscriber.py  04-rpc-server-concurrency-limits.py
src/swampyer/: __init__.py  client.py  common.py  exceptions.py  messages.py  queues.py  serializers.py  transport.py  utils.py
swampyer/: __init__.py  client.py  common.py  connection.py  exceptions.py  fields.py  messages.py  queues.py  serializers.py  transport.py
tests/: 010-imports.py  020-connect.py  common.py  test_01_imports.py  test_01_messages.py  test_02_connect.py  test_03_websockets.py  test_04_tcp_sockets.py  test_04_unix_sockets.py  test_05_unix_sockets.py  test_06_protocols.py  test_07_concurrency.py  test_07_packet_oversized.py  test_07_reconnect.py  test_08_concurrency_events.py  test_09_windows_socket_error_10054.py  test_10_hide_password_debug.py
tests/data/: izaber.yaml
tests/lib/: __init__.py  ldap.py
tests/test_server/: auth.py  echoserver.py  start.sh  stop.sh
tests/test_server/.crossbar/: config.yaml
