[tool.poetry]
name = "swampyer"
description = "Simple WAMP library with minimal external dependencies"
version = '3.0.20230623'
authors = ["Aki Mimoto <aki@zaber.com>"]
packages = [
  { include = "swampyer" }
]

[tool.poetry.dependencies]
python = ">=3.7.0,<4.0"
websocket-client = ">=0.59.0"
certifi = ">=2020.12.5"
six = "^1.16.0"
cbor = { version = "^1.0.0", optional = true }
msgpack = { version = "^1.0.2", optional = true }
websockets = { version = "^11.0.3", optional = true}

[tool.poetry.dev-dependencies]
pytest = ">=4.6.11"

[tool.poetry.extras]
cbor = [ "cbor" ]
msgpack = [ "msgpack" ]
websockets = [ "websockets" ]
all = [ "cbor", "msgpack", "websockets" ]

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
